--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 			
 			<p class="lead">You are pressing key <b id="keyLabel">__</b>!
 			
-			
+			<br/><br/>
+			<button id="noiseButton" class="btn btn-primary">Make a noise!</button>
 		
 		</div>
 	
